--- a/views/inventoryhistory/inventoryhistoryscripts.ejs
+++ b/views/inventoryhistory/inventoryhistoryscripts.ejs
@@ -74,9 +74,6 @@
             $('#historyDetails').empty();
 
             getMovementDetails(type, movementId)
-                .catch(error => {
-                    console.error(error);
-                });
         })
         //#endregion
 
@@ -163,21 +160,19 @@
         //#endregion
 
         //#region Dropdown
-        function LoadList() {
-            Fetch('/branch/load', (result) => {
-                const data = result.data;
-                const allBranchItem = $('<li></li>')
-                    .text("All Branch")
-                    .data('branchid', 'ALL');
-                $('.branchlist').append(allBranchItem);
-                $.each(data, function (key, item) {
-                    if (item.status == "ACTIVE") {
-                        const listItem = $('<li></li>')
-                            .text(item.branchname + " (" + item.branchid + ")")
-                            .data('branchid', item.branchid);
-                        $('.branchlist').append(listItem);
-                    }
-                });
+        async function LoadList() {
+            const branch = await queryUtility.Load('/branch/load');
+            const allBranchItem = $('<li></li>')
+                .text("All Branch")
+                .data('branchid', 'ALL');
+            $('.branchlist').append(allBranchItem);
+            $.each(branch.data, function (key, item) {
+                if (item.status == "ACTIVE") {
+                    const listItem = $('<li></li>')
+                        .text(item.branchname + " (" + item.branchid + ")")
+                        .data('branchid', item.branchid);
+                    $('.branchlist').append(listItem);
+                }
             });
 
             $('.branchlist').on('click', 'li', function () {
@@ -188,18 +183,16 @@
                 filterData();
             });
 
-            Fetch('/inventoryhistory/type', (result) => {
-                const data = result.data;
-                const allTypeItem = $('<li></li>')
-                    .text("All Type")
-                    .data('typeid', 'ALL');
-                $('.typelist').append(allTypeItem);
-                $.each(data, function (key, item) {
-                    const listItem = $('<li></li>')
-                        .text(item.type)
-                        .data('typeid', item.type);
-                    $('.typelist').append(listItem);
-                });
+            const inventory = await queryUtility.Load('/inventoryhistory/type');
+            const allTypeItem = $('<li></li>')
+                .text("All Type")
+                .data('typeid', 'ALL');
+            $('.typelist').append(allTypeItem);
+            $.each(inventory.data, function (key, item) {
+                const listItem = $('<li></li>')
+                    .text(item.type)
+                    .data('typeid', item.type);
+                $('.typelist').append(listItem);
             });
 
             $('.typelist').on('click', 'li', function () {
@@ -212,7 +205,7 @@
         }
         //#endregion
 
-        //#region Util
+        //#region Utility
         function formatDate(date) {
             let startDate = moment(date.split(' - ')[0], 'MMM D, YYYY').format('MM/DD/YYYY');
             let endDate = moment(date.split(' - ')[1], 'MMM D, YYYY').format('MM/DD/YYYY');
@@ -222,39 +215,64 @@
         }
 
         function getMovementDetails(type, movementId) {
-            //@check script.ejs to see queryUtility OBJ
+            const modalBody = $('#historyDetails');
+            
+            //@check script.ejs to see queryUtility OBJ            
+            //@check /inventoryhistory/modalDisplays.ejs to see function OBJs
+
+            //@use for case "SALES" and "REFUND"
+            sales = async () => {
+                const sales = await queryUtility.Save('/salesdetails/getdetails', {detailid: movementId});
+
+                const details = {...sales.data[0]}
+                const display = displaySales.Initialize(details);
+
+                const items = JSON.parse(details.ordescription);
+                const date = ConvertDate(details.ordate);
+                const detailid = details.ornumber;
+
+                $(modalBody).html(display);
+                displaySales.Items(items, date, detailid)
+            }
+
+            //@use for case "ADJUSTMENT"
+            adjustment = async () => {
+                const adjustment = await queryUtility.Load('/stockadjustment/' + movementId);
+                const details = adjustment.data.details;
+                const items = adjustment.data.items;
+                const attachments = JSON.parse(details[0].attachments);
+
+                const display = displayAdjustment.Initialize(details);
+                $(modalBody).html(display);
+
+                if (attachments) {
+                    displayAdjustment.Links(attachments);
+                } else {
+                    $('#downloadLinks').append('No Attachments');
+                }
+                displayAdjustment.Items(items, details[0].status)
+            }
+
+            //@use for case "TRANSFER"
+            transfer = async () => {
+                const transfer = await queryUtility.Save('/transferorder/gettransferdetails', {transferid: movementId});
+                const details = transfer.data;
+                console.log(transfer)
+            }
+
             return new Promise((resolve, reject) => {
                 switch (type) {
                     case "ADJUSTMENT":
-                        queryUtility.getAdjustment(movementId, adjustment => {
-                            const details = adjustment.details;
-                            const items = adjustment.items;
-                            const attachments = JSON.parse(details[0].attachments);
-
-                            //@check /inventoryhistory/modalDisplays.ejs to see adjustmentDisplay, displayLinks, populateAdjustmentItems
-                            const display = adjustmentDisplay(details);
-                            $('#historyDetails').html(display);
-
-                            if (attachments) {
-                                displayLinks(attachments);
-                            } else {
-                                $('#downloadLinks').append('No Attachments');
-                            }
-                            populateAdjustmentItems(items, details[0].status)
-
-                            resolve('success');
-                        });
+                        adjustment();
                         break;
                     case "SALES":
+                        sales();
+                        break;
                     case "REFUND":
-                        queryUtility.getSales(movementId, sales => {
-                            resolve(sales);
-                        });
+                        sales();
                         break;
                     case "TRANSFER":
-                        queryUtility.getTransfer(movementId, transfer => {
-                            resolve(transfer);
-                        });
+                        transfer();
                         break;
                     default:
                         reject(new Error('Invalid Type'));
