--- a/views/login/loginscripts.ejs
+++ b/views/login/loginscripts.ejs
@@ -11,7 +11,7 @@
             }
         });
 
-        Login = () => {
+        Login = async () => {
             let username = $('#username').val();
             let password = $('#password').val();
 
@@ -24,41 +24,29 @@
                 warning('Required', `Please fill up ${message}`);
             }
             else {
-                $.ajax({
-                    type: 'POST',
-                    url: '/login/authentication',
-                    data: {
-                        username: username,
-                        password: password,
-                    },
-                    success: function (result) {
-                        const access = result.data;
-                        if (result.msg == 'success') {
-                            $('#username').val('');
-                            $('#password').val('');
-                            successlogin('Logged In', 'Successfully').then(() => {
-                                if(access.toLowerCase() == 'production') {
-                                    location.replace("/production");
-                                } else if(access.toLowerCase() == 'procurement') {
-                                    location.replace("/purchaseorder");
-                                } else if(access.toLowerCase() == 'accounting') {
-                                    location.replace("/salesdetails");
-                                } else {
-                                    location.replace("/");
-                                }
-                            })
-
+                const data = {
+                    username: username,
+                    password: password,
+                }
+                const response = await queryUtility.Save('/login/authentication', data)
+                const access = response.data;
+                if (response.msg == 'success') {
+                    $('#username').val('');
+                    $('#password').val('');
+                    successlogin('Logged In', 'Successfully').then(() => {
+                        if(access.toLowerCase() == 'production') {
+                            location.replace("/production");
+                        } else if(access.toLowerCase() == 'procurement') {
+                            location.replace("/purchaseorder");
+                        } else if(access.toLowerCase() == 'accounting') {
+                            location.replace("/salesdetails");
+                        } else {
+                            location.replace("/");
                         }
-
-                        if (result.msg == 'incorrect') {
-                            warning('Invalid Credentials.');
-                        }
-
-                    },
-                    error: function (err) {
-                        errormsg(err);
-                    }
-                })
+                    })
+                } else {
+                    warning('Warning', 'Invalid Credentials.');
+                }
             }
         }
     })
