--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -319,6 +319,11 @@
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Production Inventory</span>
           </a>
+          <h6 class="collapse-header">History:</h6>
+          <a class="collapse-item" href="/materialhistory">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Material History</span>
+          </a>
           <!-- <h6 class="collapse-header">Logs:</h6>
           <a class="collapse-item" href="#">
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
